# fastapi-guide

./: .env  .env.example  .gitignore  fastapi_guide.db  requirements.txt  setup.cfg  setup.py
app/: __init__.py  database.py  main.py  main_app.py  models.py
app/core/: app.py  config.py  instrumentation.py  lifespan.py  logger.py  middleware.py  security.py  security_legacy.py
app/daos/: blog_dao.py  item_dao.py  user_dao.py
app/db/: base.py  config.py  items_data.py  session.py
app/dependencies/: auth.py
app/exceptions/: db_exceptions.py
app/middleware/: cors.py
app/models/: __init__.py  blog.py  item.py  user.py
app/otel/: tracing.py
app/routers/: auth_router.py  blog_router.py  books_router.py  item_router.py  items_router.py  user_router.py
app/routes/: __init__.py  auth_router.py  blog_router.py  item_router.py  purchase_router.py  user_router.py
app/schemas/: blog.py  book.py  common.py  item.py  token.py  user.py
app/services/: auth_service.py  blog_service.py  item_service.py  user_service.py
app/utils/: exceptions.py  file_upload.py  hashing.py  oauth2.py  security.py  token.py  upload_profile_photo.py  validations.py
data/: items.json  users.json
docs/: git.md  index.md
docs/1-setup/: install-n-setup.md  pyproject.toml.md  requirements.md  start-deploy.md
docs/2-folder-structure/: project_structure.md  tree.md
docs/3-database/: database.md  engine-conn-mngment.md  sql-alchemy.md
docs/6-utilities/: exceptions.md
docs/8-misc/: background_tasks.md  (+5 more)
logs/: purchases.txt
migrations/: env.py
tests/: test_main.py
(+49 files in other folders)
