# A static configuration file

[metadata]
name = fastapi-guide
version = 0.1.0
description = A production-ready FastAPI application guide
long_description = file: README.md
long_description_content_type = text/markdown
author = Ashok Kumar Kola
author_email = ashokkumarkola.dev@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Framework :: FastAPI
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options] # pip install .
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.110.0
    uvicorn[standard]>=0.29.0
    pydantic>=2.0

[options.packages.find]
where = .

[options.extras_require] # pip install .[dev]
dev =
    pytest
    httpx
    black
    ruff

[options.entry_points] # start-app command to run the application
console_scripts =
    start-app = app.main:run

# pip install -e .

# Build package
# pip install build
# python -m build


# ################################################################## #

"""

✅ No code execution
✅ Easier to read
✅ More structured

"""

